--- a/img/index.html
+++ b/img/index.html
@@ -72,7 +72,7 @@
         <h3>Follow Me</h3>
         <p>
           <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/</a> |
-          <a href=" https://github.com/umitbagci/umitbagci" target="_blank">https://github.com/umitbagci/umitbagci</a>
+          <a href=" " target="_blank">Twitter</a>
         </p>
       </div>
 
