--- a/img/contact.html
+++ b/img/contact.html
@@ -103,7 +103,7 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/</a> |
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Lınkedln</a> |
           <a href=" " target="_blank">Twitter</a>
         </p>
       </div>
