--- a/img/index.html
+++ b/img/index.html
@@ -71,8 +71,8 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Lınkedln</a> |
-          <a href=" " target="_blank">Twitter</a>
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> |
+          <a href=" https://github.com/umitbagci/umitbagci" target="_blank">Github</a>
         </p>
       </div>
 
