--- a/img/resume.html
+++ b/img/resume.html
@@ -102,6 +102,31 @@
 
       <!-- COURSES -->
 
+      <!-- MY PROJECTS -->
+<div class="section">
+  <h2>My Projects</h2>
+  <div class="card">
+    <div>
+      <p>
+        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Data Visualization With Python Projects/</a>
+      </p>
+      <p>
+        <a href="https://github.com/umitbagci/Tableau.git/" target="_blank">Tableau Projects/</a>
+      </p>
+      <p>
+        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Eda With Python Projects/</a>
+      </p>
+      <p>
+        <a href="https://github.com/umitbagci/PowerBI.git" target="_blank">Power BI Projects</a>
+      </p>
+      <p>
+        <a href="hhttps://public.tableau.com/app/profile/.mit.bagci" target="_blank">Tableu Public/</a>
+      </p>
+    </div>
+  </div>
+</div>
+<!-- MY PROJECTS -->
+
       <!-- TECHNICAL SKILLS -->
       <div class="section">
         <h2>Technical Skills</h2>
@@ -124,27 +149,6 @@
         </div>
       </div>
       <!-- TECHNICAL SKILLS -->
-
-      <!-- MY PROJECTS -->
-<div class="section">
-  <h2>My Projects</h2>
-  <div class="card">
-    <div>
-      <p>
-        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Data Visualization With Python Project/</a>
-      </p>
-     
-      <p>
-        <a href="https://github.com/umitbagci/PowerBI" target="_blank">Power BI Projects/</a>
-      </p>
-      
-      <p>
-        <a href=https://github.com/umitbagci/Tableau.git target="_blank">Tableu Projects/</a>
-      </p>
-    </div>
-  </div>
-</div>
-<!-- MY PROJECTS -->
     </div>
     <!-- PAGE CONTENT -->
 
@@ -163,8 +167,10 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln</a> |
-          <a href=" " target="_blank">Twitter</a>
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> |
+        </p>
+        <p>
+          <a href="https://github.com/umitbagci?tab=repositories" target="_blank">Github/</a> |
         </p>
       </div>
       <div>
