--- a/img/contact.html
+++ b/img/contact.html
@@ -103,8 +103,9 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/</a> |
-          <a href=" " target="_blank">Twitter</a>
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> |
+          <a href=" https://github.com/umitbagci/umitbagci" target="_blank">Github</a>
+        </p>
         </p>
       </div>
 
