--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="menu">
-        <a href="index.html">Home</a> | <a href="resume.html">Resume</a> |
+        <a href="index.html">Home</a> | <a href="resume.html">Resume</a> 
         <a href="contact.html">Contact</a>
       </div>
     </div>
@@ -108,19 +108,19 @@
   <div class="card">
     <div>
       <p>
-        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Data Visualization With Python Projects/</a>
+        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Data Visualization With Python Projects</a>
       </p>
       <p>
-        <a href="https://github.com/umitbagci/Tableau.git/" target="_blank">Tableau Projects/</a>
+        <a href="https://github.com/umitbagci/Tableau.git/" target="_blank">Tableau Projects</a>
       </p>
       <p>
-        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Eda With Python Projects/</a>
+        <a href="https://github.com/umitbagci/Data-Visulation.git" target="_blank">Eda With Python Projects</a>
       </p>
       <p>
         <a href="https://github.com/umitbagci/PowerBI.git" target="_blank">Power BI Projects</a>
       </p>
       <p>
-        <a href="hhttps://public.tableau.com/app/profile/.mit.bagci" target="_blank">Tableu Public/</a>
+        <a href="hhttps://public.tableau.com/app/profile/.mit.bagci" target="_blank">Tableu Public</a>
       </p>
     </div>
   </div>
@@ -145,7 +145,7 @@
           <div class="left">
             <h2>Tools, Apps, Platforms</h2>
           </div>
-          <div class="right">PostgreSQL, MySql, Jupyter Lab, Jupyter Notebook, VsCode </div>
+          <div class="right">PostgreSQL, MySql, Jupyter Lab, Jupyter Notebook, VsCode, Github,Slack </div>
         </div>
       </div>
       <!-- TECHNICAL SKILLS -->
@@ -167,10 +167,10 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> |
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> 
         </p>
         <p>
-          <a href="https://github.com/umitbagci?tab=repositories" target="_blank">Github/</a> |
+          <a href="https://github.com/umitbagci?tab=repositories" target="_blank">Github/</a> 
         </p>
       </div>
       <div>
