--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> |
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln</a> |
           <a href=" https://github.com/umitbagci/umitbagci" target="_blank">Github</a>
         </p>
         </p>
