--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="menu">
-        <a href="index.html" title="Ana sayfayı aç">Home</a> |
+        <a href="index.html" title="Ana sayfayı aç">Home</a> 
         <a href="resume.html">Resume</a> |
         <a href="contact.html">Contact</a>
       </div>
@@ -71,7 +71,7 @@
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> |
+          <a href="https://www.linkedin.com/in/pran-%C3%BC-bagci-027719250/" target="_blank">Linkedln/</a> 
           <a href=" https://github.com/umitbagci/umitbagci" target="_blank">Github</a>
         </p>
       </div>
