--- a/index.html
+++ b/index.html
@@ -52,8 +52,43 @@
       </div>
     </div>
     <!-- PAGE CONTENT -->
-
-
+    
+    <div class="header">
+      <div class="title">
+        <span></span>
+        <h2>The programming language and tools I learned to be a data analyst</h2>
+      </div>
+    </div>
+    <div class = "img">
+      <div style="background-image: url('img/Fundamental.png');"></div>
+      <div style="background-image: url('img/Git-Github.png');"></div>
+      <div style="background-image: url('img/Google Sheets.png');"></div>
+      <div style="background-image: url('img/Python.png');"></div>
+      <div style="background-image: url('img/Power BI.png');"></div>
+      <div style="background-image: url('img/numpy.png');"></div>
+      <div style="background-image: url('img/Pandas.png');"></div>
+      <div style="background-image: url('img/SQL.png');"></div>
+      <div style="background-image: url('img/Statistics.png');"></div>
+      <div style="background-image: url('img/Tableau\ .png');"></div>
+    </div>
+    <style>
+      .img {
+        display: flex;
+        height: 20rem;
+        gap: 1rem;
+      }
+      .img > div {
+        flex: 1;
+        border-radius: 1rem;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+        transition: all .8s cubic-bezier(.25, .4, .45, 1.4);
+      }
+      .img > div:hover {
+        flex: 8;
+      }
+    </style>
 
 
     <!-- PAGE FOOTER -->
