--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="header">
       <div class="title">
         <span></span>
-        <h2>The programming language and tools I learned to be a data analyst</h2>
+        <h2>Tools I learned as a Data Analyzer</h2>
       </div>
     </div>
     <div class = "img">
